test/npm/typescript/openfl/errors/TypeErrorTest.ts
import TypeError from "openfl/errors/TypeError";
import * as assert from "assert";


describe ("TypeScript | TypeError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var typeError = new TypeError ();
		assert.notEqual (typeError, null);
		
	});
	
	
});